syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

import "common.proto";

message InitializeProfitContractInput {
    Hash token_contract_system_name = 1;
}

message CreateProfitItemInput {
    sint64 total_weight = 1;
    string token_symbol = 2;
    sint64 expired_period_number = 3;
}

message ProfitItem {
    Address virtual_address = 1;
    sint64 total_weight = 2;
    sint64 total_amount = 3;
    sint64 current_period = 4;
    string token_symbol = 5;
    repeated SubProfitItem sub_profit_items = 7;
    Address creator = 8;
    sint64 expired_period_number = 9;
}

message SubProfitItem {
    Hash profit_id = 1;
    sint64 weight = 2;
}

message AddWeightInput {
    Address receiver = 1;
    Hash profit_id = 2;
    sint64 weight = 3;
    sint64 end_period = 4;
}

message SubWeightInput {
    Address receiver = 1;
    Hash profit_id = 2;
}

message ProfitInput {
    Hash profit_id = 1;
}

message ReleaseProfitInput {
    Hash profit_id = 1;
    sint64 period = 2;
    sint64 amount = 3;
}

message ProfitDetails {
    repeated ProfitDetail Details = 1;
}

message ProfitDetail {
    sint64 start_period = 1;
    sint64 end_period = 2;
    sint64 weight = 3;
    sint64 last_profit_period = 4;
}

message AddProfitsInput {
    Hash profit_id = 1;
    sint64 amount = 2;
    sint64 period = 3;
}

message RegisterSubProfitItemInput {
    Hash profit_id = 1;
    Hash sub_profit_id = 2;
    sint64 sub_item_weight = 3;
}

message CancelSubProfitItemInput {
    string item_name = 1;
    string sub_item_name = 2;
    Address sub_item_creator = 3;
}

message ReleasedProfitsInformation {
    sint64 total_weight = 1;
    sint64 profits_amount = 2;
    bool is_released = 3;
}

message CreatedProfitItems {
    repeated Hash ProfitIds = 1;
}

message GetCreatedProfitItemsInput {
    Address creator = 1;
}

message GetProfitItemVirtualAddressInput {
    Hash profit_id = 1;
    sint64 period = 2;
}

message GetReleasedProfitsInformationInput {
    Hash profit_id = 1;
    sint64 period = 2;
}

message GetProfitDetailsInput {
    Hash profit_id = 1;
    Address receiver = 2;
}